welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ';' expected but 'return' found.
		{case false => if (a<=0 && b<=0) {return true} return false
                                                               ^posNeg:4: error: ';' expected but 'return' found.
		case true   => if ((a<=0 && b>=0) || (a>=0 && b<=0)) {return true} return false}
                                                                                   ^